Updated BDC course

--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
@@ -32,7 +32,9 @@
                 "In this set of tutorials you'll work with an end-to-end scenario that uses SQL Server 2019's big data clusters to solve real-world problems. \r\n",
                 ""
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "d495f8be-74c3-4658-b897-ad69e6ed88ac"
+            }
         },
         {
             "cell_type": "markdown",
@@ -53,7 +55,9 @@
                 "\r\n",
                 "In this series of tutorials, you will build a solution using the scale-out features of SQL Server 2019, Data Virtualization, Data Marts, and the Data Lake features. "
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "3815241f-e81e-4cf1-a48e-c6e67b0ccf7c"
+            }
         },
         {
             "cell_type": "markdown",
@@ -75,7 +79,9 @@
                 "\r\n",
                 "For a complete workshop on SQL Server 2019's big data clusters, <a href=\"https://github.com/Microsoft/sqlworkshops/tree/master/sqlserver2019bigdataclusters\" target=\"_blank\">check out this resource</a>."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "1c3e4b5e-fef4-43ef-a4e3-aa33fe99e25d"
+            }
         },
         {
             "cell_type": "markdown",
@@ -92,26 +98,56 @@
                 "\r\n",
                 "Notice also that these commands assume a `c:\\temp` location, if you want to use another drive or directory, edit accordingly.\r\n",
                 "\r\n",
-                "Once you have edited these commands, you can open a Command Prompt on your system (Or press **CTL+`** for a Terminal)and copy and paste each block, one at a time and run them.\r\n",
+                "Once you have edited these commands, you can open a Command Prompt *(not PowerShell)* on your system and copy and paste each block, one at a time and run them there, observing the output.\r\n",
                 "\r\n",
                 "In the next tutorial you will restore these databases on the Master Instance."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "5220c555-f819-409e-b206-de9a2dd6d434"
+            }
         },
         {
             "cell_type": "code",
             "source": [
+                "REM Create a temporary directory for the files\r\n",
                 "md c:\\temp\r\n",
                 "cd c:\\temp\r\n",
                 "\r\n",
+                "REM Get the database backups\r\n",
                 "curl \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/WWI.bak\" -o c:\\temp\\WWI.bak\r\n",
-                "\r\n",
-                "kubectl cp WWI.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "curl \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/AdventureWorks.bak\" -o c:\\temp\\AdventureWorks.bak\r\n",
+                "curl \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/AdventureWorksDW.bak\" -o c:\\temp\\AdventureWorksDW.bak\r\n",
+                "curl \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/Analysis.bak\" -o c:\\temp\\Analysis.bak\r\n",
+                "curl \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/sales.bak\" -o c:\\temp\\sales.bak\r\n",
+                "curl \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/NYC.bak\" -o c:\\temp\\NYC.bak\r\n",
+                "curl \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/WWIDW.bak\" -o c:\\temp\\WWIDW.bak\r\n",
                 ""
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "3e1f2304-cc0a-4e0e-96e2-333401b52036"
+            },
             "outputs": [],
             "execution_count": 2
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "REM Copy the backups to the data location on the SQL Server Master Instance\r\n",
+                "cd c:\\temp\r\n",
+                "kubectl cp WWI.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "kubectl cp WWIDW.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "kubectl cp sales.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "kubectl cp analysis.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "kubectl cp AdventureWorks.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "kubectl cp AdventureWorksDW.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "kubectl cp NYC.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "19106890-7c6c-4631-9acc-3dda4d2a50ab"
+            },
+            "outputs": [],
+            "execution_count": 0
         },
         {
             "cell_type": "markdown",
@@ -125,24 +161,29 @@
                 "You need to replace the `ReplaceWithKnoxPassword`, `ReplaceWithKnoxwEdnpoint`, and potentially the drive letter and directory values with the appropriate information on your system. \r\n",
                 "> (You can use **CTL-H** to open the Find and Replace dialog in the cell)"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "2c426b35-dc57-4dc8-819d-6642deb69110"
+            }
         },
         {
             "cell_type": "code",
             "source": [
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data?op=MKDIRS\"\r\n",
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers?op=MKDIRS\"\r\n",
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_products?op=MKDIRS\"\r\n",
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/web_logs?op=MKDIRS\"\r\n",
-                ""
+                "REM Make the Directories in HDFS\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data?op=MKDIRS\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers?op=MKDIRS\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_products?op=MKDIRS\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/web_logs?op=MKDIRS\""
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "f2143d4e-6eb6-4bbc-864a-b417398adc21"
+            },
             "outputs": [],
             "execution_count": 0
         },
         {
             "cell_type": "code",
             "source": [
+                "REM Get the textfiles \r\n",
                 "curl -G \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/product_reviews_sample.csv\" -o product_reviews.csv\r\n",
                 "curl -G \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/customers.csv\" -o customers.csv\r\n",
                 "curl -G \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/stockitemholdings.csv\" -o products.csv\r\n",
@@ -150,20 +191,25 @@
                 "curl -G \"https://cs7a9736a9346a1x44c6xb00.blob.core.windows.net/backups/training-formatted.csv\" -o training-formatted.csv\r\n",
                 ""
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "c8a74514-2e0d-4f3c-99dd-4c541c11e15e"
+            },
             "outputs": [],
             "execution_count": 0
         },
         {
             "cell_type": "code",
             "source": [
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data/product_reviews.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"product_reviews.csv\"\r\n",
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers/customers.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"customers.csv\"\r\n",
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_products/products.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"products.csv\"\r\n",
-                "curl -i -L -k -u root:<ReplacewithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/web_logs/web_clickstreams.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"web_clickstreams.csv\"\r\n",
+                "REM Copy the text files to the HDFS directories\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data/product_reviews.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"product_reviews.csv\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers/customers.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"customers.csv\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_products/products.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"products.csv\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/web_logs/web_clickstreams.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"web_clickstreams.csv\"\r\n",
                 ""
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "9c9e49ef-ef0d-47c4-92fd-b7e7bfa2d2f2"
+            },
             "outputs": [],
             "execution_count": 0
         },
@@ -174,7 +220,9 @@
                 "\r\n",
                 "Now you're ready to open the next Python Notebook - [bdc_tutorial_01.ipynb](bdc_tutorial_01.ipynb) - to learn how to work with the SQL Server 2019 bdc Master Instance."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "519aa112-47e0-443b-9b27-05fc02349b09"
+            }
         }
     ]
 }
