Updates for BDC Workshop at Ignite. All passed.

--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
@@ -134,13 +134,13 @@
             "source": [
                 "REM Copy the backups to the data location on the SQL Server Master Instance\r\n",
                 "cd c:\\temp\r\n",
-                "kubectl cp WWI.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
-                "kubectl cp WWIDW.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
-                "kubectl cp sales.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
-                "kubectl cp analysis.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
-                "kubectl cp AdventureWorks.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
-                "kubectl cp AdventureWorksDW.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
-                "kubectl cp NYC.bak master-0:/var/opt/mssql/data -c mssql-server -n sqlbigdata\r\n",
+                "kubectl cp WWI.bak master-0:/var/opt/mssql/data -c mssql-server -n <ReplaceWithClusterName>\r\n",
+                "kubectl cp WWIDW.bak master-0:/var/opt/mssql/data -c mssql-server -n <ReplaceWithClusterName>\r\n",
+                "kubectl cp sales.bak master-0:/var/opt/mssql/data -c mssql-server -n <ReplaceWithClusterName>\r\n",
+                "kubectl cp analysis.bak master-0:/var/opt/mssql/data -c mssql-server -n <ReplaceWithClusterName>\r\n",
+                "kubectl cp AdventureWorks.bak master-0:/var/opt/mssql/data -c mssql-server -n <ReplaceWithClusterName>\r\n",
+                "kubectl cp AdventureWorksDW.bak master-0:/var/opt/mssql/data -c mssql-server -n <ReplaceWithClusterName>\r\n",
+                "kubectl cp NYC.bak master-0:/var/opt/mssql/data -c mssql-server -n <ReplaceWithClusterName>\r\n",
                 ""
             ],
             "metadata": {
@@ -158,7 +158,7 @@
                 "\r\n",
                 "The first code block creates directories in the HDFS store. The second block downloads the source data from a web location. And in the final block, you'll copy the data from your local system to the SQL Server 2019 big data cluster Storage Pool.\r\n",
                 "\r\n",
-                "You need to replace the `ReplaceWithKnoxPassword`, `ReplaceWithKnoxwEdnpoint`, and potentially the drive letter and directory values with the appropriate information on your system. \r\n",
+                "You need to replace the `<ReplaceWithHDFSGatewayPassword>`, `<ReplaceWithHDFSGatewayEndpoint>`, and potentially the drive letter and directory values with the appropriate information on your system. \r\n",
                 "> (You can use **CTL-H** to open the Find and Replace dialog in the cell)"
             ],
             "metadata": {
@@ -169,10 +169,11 @@
             "cell_type": "code",
             "source": [
                 "REM Make the Directories in HDFS\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data?op=MKDIRS\"\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers?op=MKDIRS\"\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_products?op=MKDIRS\"\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/web_logs?op=MKDIRS\""
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data?op=MKDIRS\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers?op=MKDIRS\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/partner_products?op=MKDIRS\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/web_logs?op=MKDIRS\"\r\n",
+                ""
             ],
             "metadata": {
                 "azdata_cell_guid": "f2143d4e-6eb6-4bbc-864a-b417398adc21"
@@ -201,10 +202,10 @@
             "cell_type": "code",
             "source": [
                 "REM Copy the text files to the HDFS directories\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data/product_reviews.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"product_reviews.csv\"\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers/customers.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"customers.csv\"\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/partner_products/products.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"products.csv\"\r\n",
-                "curl -i -L -k -u root:<ReplaceWithKnoxPassword> -X PUT \"https://<ReplaceWithKnoxEndpoint>:30443/gateway/default/webhdfs/v1/web_logs/web_clickstreams.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"web_clickstreams.csv\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithHDFSGatewayPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/product_review_data/product_reviews.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"product_reviews.csv\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithHDFSGatewayPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/partner_customers/customers.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"customers.csv\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithHDFSGatewayPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/partner_products/products.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"products.csv\"\r\n",
+                "curl -i -L -k -u root:<ReplaceWithHDFSGatewayPassword> -X PUT \"https://<ReplaceWithHDFSGatewayEndpoint>:30443/gateway/default/webhdfs/v1/web_logs/web_clickstreams.csv?op=create&overwrite=true\" -H \"Content-Type: application/octet-stream\" -T \"web_clickstreams.csv\"\r\n",
                 ""
             ],
             "metadata": {
